// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceVertical default 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@supports (-moz-appearance:none) {
  .c0 {
    gap: 1rem;
  }
}

@supports not (-moz-appearance:none) {
  .c0.c0 > * {
    margin-top: 1rem;
  }

  .c0.c0 > *:first-child {
    margin-top: 0rem;
  }
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`SpaceVertical reversed 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

@supports (-moz-appearance:none) {
  .c0 {
    gap: 1rem;
  }
}

@supports not (-moz-appearance:none) {
  .c0.c0 > * {
    margin-top: 1rem;
  }

  .c0.c0 > *:last-child {
    margin-top: 0rem;
  }
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`SpaceVertical with specified gap 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@supports (-moz-appearance:none) {
  .c0 {
    gap: 2rem;
  }
}

@supports not (-moz-appearance:none) {
  .c0.c0 > * {
    margin-top: 2rem;
  }

  .c0.c0 > *:first-child {
    margin-top: 0rem;
  }
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;
